--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -86,6 +86,18 @@
       <artifactId>druid</artifactId>
       <version>1.0.19</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+      <version>1.0.6.RELEASE</version>
+    </dependency>
+
+    <!-- springboot整合kafka -->
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -123,5 +135,15 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
